--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.2.2",
     "mongoose": "^5.2.8"
   },
   "author": "",
